# find-cuda-versions

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yaml  sync-files.yaml
.github/workflows/: pre-commit.yaml  pytest.yaml
find_cuda_versions/: __init__.py  find_cuda_versions.py  parser.py
tests/: test_find_cuda_versions.py
tests/data/: ubuntu2004-sbsa.html  ubuntu2004-x86_64.html
