[tool.poetry]
name = "find-cuda-versions"
version = "0.1.0"
description = ""
authors = ["Kenji Miyake <31987104+kenji-miyake@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.0"
argcomplete = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-datadir = "^1.4.1"

[tool.poetry.scripts]
find-cuda-versions = "find_cuda_versions.find_cuda_versions:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
